Fmt + start work on proc macro

--- a/synth-module/Cargo.toml
+++ b/synth-module/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+synth-module-derive = { path = "../synth-module-derive" }
 synth-node = { path = "../synth-node" }
 
 dasp_graph = { version = "0.11", default-features = false, features = [ "all-nodes" ] }
